updates to zoom docs

--- a/blog/_posts/2020-07-06-zoom-bp.md
+++ b/blog/_posts/2020-07-06-zoom-bp.md
@@ -18,7 +18,8 @@ Yet another set of recommendations for how to transition to remote work!? Yes! H
 
 4. Have a **technology plan**, test it out, and **have a backup plan**. Virtual meetings are less forgiving if technology is not working so make sure to identify a seperate channel that is a go-to for communication outside of the video call. If you intend to use a new platform or a feature that you are not familiar with (e.g. breakout rooms), set time aside to test it out before your meeting. It may also be helpful to provide content and/or links for participants to download content in case the video quality of shared content is reduced. Reach out to cyberhelp@sesync.org for help or to set up a time to test out meeting settings. 
 
-5. Design your meeting to **ensure accessibility and inclusivity**. Will participants in different countries have access to all platforms being used? Is there a way to participate fully without high-bandwidth internet connectivity or multiple monitors in a home office? Does your team have deaf or hard-of-hearing participants that would benefit from a service like real-time captioning or video relay services? Consider asking team members in advance whether they are comfortable and willing to use their video during any or all of the meeting. 
+5. Design your meeting to **ensure accessibility and inclusivity**. Will participants in different countries have access to all platforms being used? Is there a way to participate fully without high-bandwidth internet connectivity or multiple monitors in a home office? Does your team have deaf or hard-of-hearing participants that would benefit from a service like real-time captioning or video relay services? Consider asking team members in advance whether they are comfortable and willing to use their video during any or all of the meeting. Devise a plan for fielding questions and comments from participants in an equitable manner that allows everyone to contribute, recognizing that multiple modes of communication may be necessary. 
+
 
 ## During your meeting
 
@@ -26,7 +27,7 @@ Yet another set of recommendations for how to transition to remote work!? Yes! H
 
 2. Consider **designating a co-host** who is not the presenter to manage logistics during a session. It can be difficult to simultaneously manage participation or handle unanticipated distruptions while delivering content. SESYNC staff may be able to fulfill this role, or a co-lead that can use chat and private messages to moderate the flow of discussion and make adjustments in real time. Consider sharing this responsibility among team members by rotating the co-host role between sessions. Check out the [Zoom meeting quickstart](https://cyberhelp.sesync.org/quickstart/zoom-qs.html) page for more details on "host" and "co-host" meeting roles. 
 
-3. Use a **shared note-taking** document and provide alternate ways to access or download material being presented, such as a link to a cloud-based file system like Google Drive or SESYNC's file share. Determine ahead of time whether the meeting chat will be saved automatically in case there is discussion taking place that you want to preserve. Note that private [chat messages](https://support.zoom.us/hc/en-us/articles/203650445-In-meeting-chat) between Zoom meeting participants are not visible to the host, however a meeting host can disable private messaging. 
+3. Use a **shared note-taking** document and provide alternate ways to access or download material being presented, such as a link to a cloud-based file system like Google Drive or SESYNC's file share. Several online note-taking platforms exists including [Etherpad](https://etherpad.org/), [Hackpad](https://github.com/dropbox/hackpad), and [Google Docs](https://www.google.com/docs/about/). Determine ahead of time whether the meeting chat will be saved automatically in case there is discussion taking place that you want to preserve. Note that private [chat messages](https://support.zoom.us/hc/en-us/articles/203650445-In-meeting-chat) between Zoom meeting participants should not visible to the host, however a meeting host can disable private messaging. Private messages may still be visible to the host in the meeting transcript text file. 
 
 4. **Promote focus**. Realize that there is a danger for e-conferences or virtual meetings to be taken less seriously than in-person meetings because there is no travel involved and participants are generally not removed from their everyday environment. Turn off visual and audio notifications on your computer (e.g. Do Not Disturb setting on Macs or System > Turn off Notifications on PC). Dedicate as much screen real estate to your meeting as possible, and consider sharing only a relevant window rather than your entire screen when sharing content if you don't need to switch between windows. If possible, consider leveraging hardware to ensure that team members will be able to see your face well&mdash;seeing each other helps to create a more personal experience for sessions focused on conversation. Diffuse natural light is the best for illuminating your face, but when it is unavailable or unreliable rearranging several lamps to your desk set-up can be a good substitute. 
 
@@ -35,7 +36,7 @@ Yet another set of recommendations for how to transition to remote work!? Yes! H
 
 ## After the meeting
 
-*Don't forget to follow up!* Welcome asynchronous contributions and provide guidelines on how to do so. Even for team members that are virtually present, it may be more difficult to fully engage during plenary sessions due to time zone differences, hardware or connectivity issues, distractions, or other issues you may not be aware of. Inviting contributions outside of the scheduled meeting time e.g. in a shared note-taking document, Slack workspace, or GitHub issues, provides a mechanism for everyone to more fully engage. 
+*Don't forget to follow up!* Welcome asynchronous contributions and provide guidelines on how to do so. Even for team members that are virtually present, it may be more difficult to fully engage during plenary sessions due to time zone differences, hardware or connectivity issues, distractions, or other issues you may not be aware of. Inviting contributions outside of the scheduled meeting time e.g. in a shared note-taking document, [Slack](https://slack.com/resources/slack-101/what-is-slack) workspace for [project management](https://slack.com/help/articles/218130338-Slack-for-project-management), or [GitHub issues](https://github.com/features/project-management/), provides a mechanism for everyone to more fully engage. Using a software platform for project management and/or task-tracking can help keep momentum going between meetings by showing visible progress towards big picture goals when smaller tasks are accomplished. 
 
 
 ## Check out More Resources
