--- a/quickstart/_posts/2020-07-06-zoom-qs.md
+++ b/quickstart/_posts/2020-07-06-zoom-qs.md
@@ -46,6 +46,14 @@ If you have more than 8 to 10 participants in your meeting, consider using break
 
 See Zoom's help page [here](https://support.zoom.us/hc/en-us/articles/206476093-Enabling-breakout-rooms) for more information. 
 
+# Protect Your Meeting
+
+Publicizing and sharing meeting links on social media can unfortunately invite unwanted participation by disruptive guests (e.g. "Zoombombing"). We therefore recommend only sharing the meeting link with invited participants. You can also protect your meeting by setting options for using a waiting room, setting a meeting password, and controlling screen sharing permissions. See these articles for more guidance on how to change you Zoom settings and protect your meetings: 
+
+* [Security Settings for Zoom Meetings](https://umd.service-now.com/itsupport/?id=kb_article_view&sysparm_article=KB0015411&sys_kb_id=93a8eafadb7384904cb03562399619e4)
+* [How to Keep Uninvited Guests Out of Your Zoom Event](https://blog.zoom.us/wordpress/2020/03/20/keep-uninvited-guests-out-of-your-zoom-event/)
+* [How Can I Secure My Virtual Meeting?](https://cyberhelp.sesync.org/faq/virtual-meeting-security.html)
+
 # More Tips and Considerations
 
 * GitLab's [handbook for using Zoom](https://about.gitlab.com/handbook/tools-and-tips/zoom/) is a great resource.
