update link bc hackpad is now dropbox paper

--- a/blog/_posts/2020-07-06-zoom-bp.md
+++ b/blog/_posts/2020-07-06-zoom-bp.md
@@ -27,7 +27,7 @@ Yet another set of recommendations for how to transition to remote work!? Yes! H
 
 2. Consider **designating a co-host** who is not the presenter to manage logistics during a session. It can be difficult to simultaneously manage participation or handle unanticipated distruptions while delivering content. SESYNC staff may be able to fulfill this role, or a co-lead that can use chat and private messages to moderate the flow of discussion and make adjustments in real time. Consider sharing this responsibility among team members by rotating the co-host role between sessions. Check out the [Zoom meeting quickstart](https://cyberhelp.sesync.org/quickstart/zoom-qs.html) page for more details on "host" and "co-host" meeting roles. 
 
-3. Use a **shared note-taking** document and provide alternate ways to access or download material being presented, such as a link to a cloud-based file system like Google Drive or SESYNC's file share. Several online note-taking platforms exists including [Etherpad](https://etherpad.org/), [Hackpad](https://github.com/dropbox/hackpad), and [Google Docs](https://www.google.com/docs/about/). Determine ahead of time whether the meeting chat will be saved automatically in case there is discussion taking place that you want to preserve. Note that private [chat messages](https://support.zoom.us/hc/en-us/articles/203650445-In-meeting-chat) between Zoom meeting participants should not visible to the host, however a meeting host can disable private messaging. Private messages may still be visible to the host in the meeting transcript text file. 
+3. Use a **shared note-taking** document and provide alternate ways to access or download material being presented, such as a link to a cloud-based file system like Google Drive or SESYNC's file share. Several online note-taking platforms exists including [Etherpad](https://etherpad.org/), [Dropbox Paper](https://www.dropbox.com/paper), and [Google Docs](https://www.google.com/docs/about/). Determine ahead of time whether the meeting chat will be saved automatically in case there is discussion taking place that you want to preserve. Note that private [chat messages](https://support.zoom.us/hc/en-us/articles/203650445-In-meeting-chat) between Zoom meeting participants should not visible to the host, however a meeting host can disable private messaging. Private messages may still be visible to the host in the meeting transcript text file. 
 
 4. **Promote focus**. Realize that there is a danger for e-conferences or virtual meetings to be taken less seriously than in-person meetings because there is no travel involved and participants are generally not removed from their everyday environment. Turn off visual and audio notifications on your computer (e.g. Do Not Disturb setting on Macs or System > Turn off Notifications on PC). Dedicate as much screen real estate to your meeting as possible, and consider sharing only a relevant window rather than your entire screen when sharing content if you don't need to switch between windows. If possible, consider leveraging hardware to ensure that team members will be able to see your face well&mdash;seeing each other helps to create a more personal experience for sessions focused on conversation. Diffuse natural light is the best for illuminating your face, but when it is unavailable or unreliable rearranging several lamps to your desk set-up can be a good substitute. 
 
