--- a/quickstart/_posts/2020-07-06-zoom-qs.md
+++ b/quickstart/_posts/2020-07-06-zoom-qs.md
@@ -12,7 +12,7 @@ tags:
 
 1. **Access to enterprise Zoom meetings** - The free version of Zoom limits meetings to 45 minutes. We can provide access to enterprise Zoom and schedule meetings for your team without a time limit. A SESYNC staff member will need to schedule the meeting and will therefore be the initial "host", but can assign co-hosts or re-assign the host role *once a meeting has started*. 
 
-2. **Help customize your meeting settings** - Start a discussion with SESYNC staff by emailing cyberhelp@sesync.org to determine how to best make use of virtual conference technology for your meeting. Do you want to allow all guests in your meeting to be able to chat privately with each other? Have you ensured that everyone in the meeting can rename themselves e.g to add their pronouns? Will the meeting chat automatically be saved? We can help you navigate available options and strategize what will work best for your team. 
+2. **Help customize your meeting settings** - Start a discussion with SESYNC staff by emailing [cyberhelp@sesync.org](mailto:cyberhelp@sesync.org) to determine how to best make use of virtual conference technology for your meeting. Do you want to allow all guests in your meeting to be able to chat privately with each other? Have you ensured that everyone in the meeting can rename themselves e.g to add their pronouns? Will the meeting chat automatically be saved? We can help you navigate available options and strategize what will work best for your team. 
 
 3. **Manage participants during Zoom meetings** - A SESYNC staff member can act as meeting host or co-host to allow everyone on your team to focus on discussion rather than meeting logistics. This may be particularly helpful if you plan to use features such as [breakout rooms](https://support.zoom.us/hc/en-us/articles/206476093-Enabling-breakout-rooms), annotating shared content/whiteboard, or [non-verbal feedback](https://support.zoom.us/hc/en-us/articles/115001286183-Nonverbal-feedback-during-meetings). Note that this logistical role is distinct from facilitation support, where SESYNC staff can help strategize meeting design and/or play an active role guiding discussion in a meeting session to help achieve your goals. 
 
@@ -22,22 +22,21 @@ Everyone who participates in a Zoom call does not have access to the same featur
 
 ## Host
 
-* This is the person who schedules and starts the meeting. A meeting can start without a host depending on the meeting settings. 
-* A meeting can have only one host at a time, but the host can transfer this role to another participant *once a meeting has started*. The original host can always "reclaim" this role. 
+* This is the person who schedules and starts the meeting. A meeting cannot start without the host. 
+* A meeting can have only one host at a time, but the host can transfer this role to another participant *once a meeting has started*. The original host can always "reclaim" this role, even if they leave the meeting and rejoin. 
 * Only the host can: assign participants to breakout rooms, create a poll, assign other guests as hosts, control who participants can chat with, or end a meeting for all users.
-* Note that the host cannot see private messages between participants. 
 
 ## Co-host
 
 * Once a meeting starts, the host can assign co-host role to meeting participants.
 * There is no limit on the number of co-hosts.
-* Co-hosts can manage participants such as mute/unmute all or select participants, remove attendees, or lock a meeting.
+* Co-hosts can manage participants such as mute/unmute all or some participants, remove attendees, or lock a meeting.
 * Co-hosts cannot answer polls, only guests. 
 
 # Screen Sharing 
 
 * If you want to share content with audio, make sure to click "share computer sound".
-* See Zoom documentation [here](https://support.zoom.us/hc/en-us/articles/203395347-Screen-Sharing-a-PowerPoint-Presentation) specifically on sharing a powerpoint presentation
+* See Zoom documentation [here](https://support.zoom.us/hc/en-us/articles/203395347-Screen-Sharing-a-PowerPoint-Presentation) for advice on sharing a Powerpoint presentation
 * You can enable annotation/drawing on shared content, or on a blank "whiteboard" space e.g. for drawing diagrams. See Zoom documentation [here](https://support.zoom.us/hc/en-us/articles/115005706806-Using-annotation-tools-on-a-shared-screen-or-whiteboard)
 
 # Breakout Rooms
@@ -48,7 +47,7 @@ See Zoom's help page [here](https://support.zoom.us/hc/en-us/articles/206476093-
 
 # Protect Your Meeting
 
-Publicizing and sharing meeting links on social media can unfortunately invite unwanted participation by disruptive guests (e.g. "Zoombombing"). We therefore recommend only sharing the meeting link with invited participants. You can also protect your meeting by setting options for using a waiting room, setting a meeting password, and controlling screen sharing permissions. See these articles for more guidance on how to change you Zoom settings and protect your meetings: 
+Publicizing and sharing meeting links on social media can unfortunately invite unwanted participation by disruptive guests (e.g. "Zoombombing"). We therefore recommend only sharing the meeting link with invited participants. You can also protect your meeting by setting options for using a waiting room (required for SESYNC-hosted meetings), setting a meeting password, and controlling screen sharing permissions. See these articles for more guidance on how to change you Zoom settings and protect your meetings: 
 
 * [Security Settings for Zoom Meetings](https://umd.service-now.com/itsupport/?id=kb_article_view&sysparm_article=KB0015411&sys_kb_id=93a8eafadb7384904cb03562399619e4)
 * [How to Keep Uninvited Guests Out of Your Zoom Event](https://blog.zoom.us/wordpress/2020/03/20/keep-uninvited-guests-out-of-your-zoom-event/)
@@ -58,7 +57,7 @@ Publicizing and sharing meeting links on social media can unfortunately invite u
 
 * GitLab's [handbook for using Zoom](https://about.gitlab.com/handbook/tools-and-tips/zoom/) is a great resource.
 * Obtain consent from all individuals prior to recording a meeting in order to comply with state and federal laws.
-* Zoom's web client has limited features compared to the desktop or phone app, e.g. screen sharing may depend on your operating system. See more details in the table [here](https://support.zoom.us/hc/en-us/articles/360027397692#note)
+* Zoom's web client has limited features compared to the desktop or phone app, e.g. screen sharing capabilities may depend on your operating system. See more details in the table [here](https://support.zoom.us/hc/en-us/articles/360027397692#note).
 * You can schedule one-time meetings, recurring meetings, or start a meeting "on the fly". 
 * See some tips here on how to arrange screens effectively [here](https://keepteaching.iu.edu/resources/zoom/pin-video.html).
 * Return to SESYNC's page on [Resources and Tips for Elevating Your Team Science in an All-Virtual World](https://www.sesync.org/resources-and-tips-for-elevating-your-team-science-in-an-all-virtual-world) 
