--- a/quickstart/_posts/2020-07-06-zoom-qs.md
+++ b/quickstart/_posts/2020-07-06-zoom-qs.md
@@ -6,7 +6,7 @@ tags:
 
 > Depending on your interests and needs, SESYNC can do any or all of the following: a) test out meeting settings and consult ahead of time; b) just schedule a meeting and transfer host role at meeting start; c) act as host or co-host throughout one or more meeting sessions to manage participants, breakout rooms, polls, and/or shared content; d) be "on call" during your meeting time for real-time support over chat, phone, or video. 
 
-> *Note: Due to restrictions on UMD's Zoom licenses, if SESYNC sets up a Zoom call for you, we will be unable to make you host or co-host ahead of time. However, we can transfer host or co-host responsibilities to you as soon as the meeting starts.*
+> *Note: Due to restrictions on UMD's Zoom licenses, if SESYNC sets up a Zoom call for you, participants will need to be admitted from a Waiting Room by the host or a co-host throughout the duration of the meeting. We will be unable to make you host or co-host ahead of time. However, we can transfer host or co-host responsibilities to you as soon as the meeting starts.*
 
 # What we can provide
 
