--- a/quickstart/_posts/2020-07-06-zoom-qs.md
+++ b/quickstart/_posts/2020-07-06-zoom-qs.md
@@ -10,7 +10,7 @@ tags:
 
 # What we can provide
 
-For real-time support, we are unlikely to be able to handle requests for starting/managing calls outside of 8am-6pm Monday-Friday Eastern Time (UTC-5 until 14 March 2021). 
+> Note that for real-time support (starting/managing calls), we are unlikely to be able to handle requests outside of 8am-6pm Monday-Friday Eastern Time (UTC-5 until 14 March 2021). 
 
 1. **Access to enterprise Zoom meetings** - The free version of Zoom limits meetings to 45 minutes. We can provide access to enterprise Zoom and schedule meetings for your team without a time limit. A SESYNC staff member will need to schedule the meeting and will therefore be the initial "host", but can assign co-hosts or re-assign the host role *once a meeting has started*. 
 
