--- a/quickstart/_drafts/2020-06-25-zoom-qs.md
+++ b/quickstart/_drafts/2020-06-25-zoom-qs.md
@@ -6,8 +6,6 @@ tags:
 
 > SESYNC can offer Zoom access, customization and technical support to help you get the most out of your virtual meeting. Start a discussion with SESYNC staff by emailing [cyberhelp@sesync.org](mailto:cyberhelp@sesync.org)
 
-![Zoom Decision Tree](/assets/images/Zoom_Decision_Tree.png)
-
 # What SESYNC Provides 
 
 1. **Access to enterprise Zoom meetings** - The free version of Zoom limits meetings to 45 minutes. We can provide access to enterprise Zoom and host meetings for your team without a time limit. 
@@ -18,10 +16,16 @@ tags:
 
 4. **Manage participants during Zoom meetings** - SESYNC Zoom support allows your team to focus on discussion rather than meeting logistics.  A SESYNC staff member can act as meeting host or co-host (see details below) which may be particularly helpful if you plan to use features such as [breakout rooms] (https://support.zoom.us/hc/en-us/articles/206476093-Enabling-breakout-rooms), annotating shared content/whiteboard, or [non-verbal feedback] (https://support.zoom.us/hc/en-us/articles/115001286183-Nonverbal-feedback-during-meetings). *(Please note that this logistical role is distinct from facilitation support, where SESYNC staff help strategize meeting design and/or play an active role guiding meeting discussion.)*
 
+# Choosing a Level of Support 
+
+SESYNC can offer different levels of support depending on your team's needs. Check out the decision tree below to see which tier of support is the best fit for your group. 
+
+![Zoom Decision Tree](/assets/images/Zoom_Figure_V2.png)
+
 IMPORTANT CONSIDERATIONS: 
-1. We are unlikely to be able to handle support requests outside of 8am-6pm Monday-Friday Eastern Time (UTC-5 until 14 March 2021).
-2. We request that group’s have their final meeting times and dates confirmed at least two weeks prior to the meeting.  
-3. Due to restrictions on UMD’s Zoom licenses, if SESYNC sets up a Zoom call for your group we will be unable to make you host or co-host ahead of time. However, we can transfer host or co-host responsibilities as soon as the meeting starts.
+* We are unlikely to be able to handle support requests outside of 8am-6pm Monday-Friday Eastern Time (UTC-5 until 14 March 2021).
+* We request that group’s have their final meeting times and dates confirmed at least two weeks prior to the meeting.  
+* Due to restrictions on UMD’s Zoom licenses, if SESYNC sets up a Zoom call for your group we will be unable to make you host or co-host ahead of time. However, we can transfer host or co-host responsibilities as soon as the meeting starts.
 
 # Meeting Roles
 
@@ -39,7 +43,7 @@ Everyone who participates in a Zoom call different permissions when it comes to 
 * There is no limit on the number of co-hosts.
 * Co-hosts can manage participants such as mute/unmute all or some participants, remove attendees, or lock a meeting.
 
-#Commonly Used Zoom Features 
+# Commonly Used Zoom Features 
 
 You may want to use some of Zoom’s special features to enhance your group’s meeting experience.  Here are some of the most commonly used Zoom features by SESYNC teams and how they can be accessed during your meeting. 
 
