Update Zoom Quickstart 2/11/21

--- a/quickstart/_drafts/2020-06-25-zoom-qs.md
+++ b/quickstart/_drafts/2020-06-25-zoom-qs.md
@@ -4,7 +4,7 @@ tags:
   - Zoom
 ---
 
-> SESYNC can offer Zoom access, customization and technical support to help you get the most out of your virtual meeting. Start a discussion with SESYNC staff by emailing [cyberhelp@sesync.org](mailto:cyberhelp@sesync.org)
+> SESYNC can offer Zoom access, customization and technical support to help you get the most out of your virtual meeting. Start a discussion with SESYNC staff by emailing [cyberhelp@sesync.org](mailto:cyberhelp@sesync.org). 
 
 # What SESYNC Provides 
 
@@ -59,14 +59,14 @@ If you have more than 8 to 10 participants in your meeting, consider using break
 
 See Zoom's help page [here](https://support.zoom.us/hc/en-us/articles/206476093-Enabling-breakout-rooms) for more information. 
 
-##Record Your Meeting 
+## Record Your Meeting 
 
 Use Zoom’s recording feature to record your meeting’s presentations and discussions in active speaker or gallery view.  This is a great feature if you want to share meeting recordings with participants who might have been unable to join your call or just maintain records of your calls.  
 
-*Make sure to obtain permission from all participants of a call before recording in order to comply with state and federal laws.
-*The recording can be started by the meeting host or co-host and can be paused or stopped anytime during the call.
-*The recording, if requested, can include closed captioning to improve meeting accessibility.   
-*SESYNC can provide a downloadable link to access your meeting recording after the meeting concludes to share with your group. 
+* Make sure to obtain permission from all participants of a call before recording in order to comply with state and federal laws.
+* The recording can be started by the meeting host or co-host and can be paused or stopped anytime during the call.
+* The recording, if requested, can include closed captioning to improve meeting accessibility.   
+* SESYNC can provide a downloadable link to access your meeting recording after the meeting concludes to share with your group. 
 
 # Protect Your Meeting
 
