--- a/quickstart/_drafts/2021-02-11-zoom-qs.md
+++ b/quickstart/_drafts/2021-02-11-zoom-qs.md
@@ -25,11 +25,11 @@ SESYNC can offer different levels of support depending on your team's needs. Che
 IMPORTANT CONSIDERATIONS: 
 * We are unlikely to be able to handle support requests outside of 8am-6pm Monday-Friday Eastern Time (UTC-5 until 14 March 2021).
 * We request that group’s have their final meeting times and dates confirmed at least two weeks prior to the meeting.  
-* Due to restrictions on UMD’s Zoom licenses, if SESYNC sets up a Zoom call for your group we will be unable to make you host or co-host ahead of time. However, we can transfer host or co-host responsibilities as soon as the meeting starts.
+* If SESYNC sets up a Zoom call for your group we will be unable to make you host or co-host ahead of time. However, we can transfer host or co-host responsibilities as soon as the meeting starts.
 
 # Meeting Roles
 
-Everyone who participates in a Zoom call different permissions when it comes to controlling the meeting. There is one meeting **host** at any time which by default is the person who scheduled the meeting. That person can transfer host and/or designate meeting participants as **co-hosts** who are able to manage participants, mute settings, and/or monitor for non-verbal feedback in addition to the host. Everyone else is a **guest**. See a comprehensive table comparing roles on Zoom's help page [here](https://support.zoom.us/hc/en-us/articles/360040324512-Roles-in-a-meeting). 
+Everyone who participates in a Zoom has different access to permissions for controlling the meeting. There is one meeting **host** at any time which by default is the person who scheduled the meeting. That person can transfer host and/or designate meeting participants as **co-hosts** who are able to manage participants, and/or monitor for non-verbal feedback in addition to the host. Everyone else is a **guest**. See a comprehensive table comparing roles on Zoom's help page [here](https://support.zoom.us/hc/en-us/articles/360040324512-Roles-in-a-meeting). 
 
 ## Host
 
@@ -45,7 +45,7 @@ Everyone who participates in a Zoom call different permissions when it comes to 
 
 # Commonly Used Zoom Features 
 
-You may want to use some of Zoom’s special features to enhance your group’s meeting experience.  Here are some of the most commonly used Zoom features by SESYNC teams and how they can be accessed during your meeting. 
+Zoom’s special features could enhance your group’s meeting experience.  Here are some of the most commonly used Zoom features by SESYNC teams and how they can be accessed during your meeting. 
 
 ## Screen Sharing 
 
