Fixed a couple typos and made links accessible

--- a/quickstart/_drafts/2021-02-11-zoom-qs.md
+++ b/quickstart/_drafts/2021-02-11-zoom-qs.md
@@ -22,14 +22,14 @@ SESYNC can offer different levels of support depending on your team's needs. Che
 
 ![Zoom Decision Tree](/assets/images/Zoom_Figure_V2.png)
 
-IMPORTANT CONSIDERATIONS: 
+**IMPORTANT CONSIDERATIONS:**  
 * We are unlikely to be able to handle support requests outside of 8am-6pm Monday-Friday Eastern Time (UTC-5 until 14 March 2021).
 * We request that group’s have their final meeting times and dates confirmed at least two weeks prior to the meeting.  
 * If SESYNC sets up a Zoom call for your group we will be unable to make you host or co-host ahead of time. However, we can transfer host or co-host responsibilities as soon as the meeting starts.
 
 # Meeting Roles
 
-Everyone who participates in a Zoom has different access to permissions for controlling the meeting. There is one meeting **host** at any time which by default is the person who scheduled the meeting. That person can transfer host and/or designate meeting participants as **co-hosts** who are able to manage participants, and/or monitor for non-verbal feedback in addition to the host. Everyone else is a **guest**. See a comprehensive table comparing roles on Zoom's help page [here](https://support.zoom.us/hc/en-us/articles/360040324512-Roles-in-a-meeting). 
+Everyone who participates in a Zoom has different access to permissions for controlling the meeting. There is one meeting **host** at any time which by default is the person who scheduled the meeting. That person can transfer host and/or designate meeting participants as **co-hosts** who are able to manage participants, and/or monitor for non-verbal feedback in addition to the host. Everyone else is a **guest**. See a comprehensive table comparing roles on [Zoom's meeting role help page](https://support.zoom.us/hc/en-us/articles/360040324512-Roles-in-a-meeting). 
 
 ## Host
 
@@ -50,14 +50,14 @@ Zoom’s special features could enhance your group’s meeting experience.  Here
 ## Screen Sharing 
 
 * If you want to share content with audio, make sure to click "share computer sound".
-* See Zoom documentation [here](https://support.zoom.us/hc/en-us/articles/203395347-Screen-Sharing-a-PowerPoint-Presentation) for advice on sharing a Powerpoint presentation
-* You can enable annotation/drawing on shared content, or on a blank "whiteboard" space e.g. for drawing diagrams. See Zoom documentation [here](https://support.zoom.us/hc/en-us/articles/115005706806-Using-annotation-tools-on-a-shared-screen-or-whiteboard)
+* See the [Zoom documentation on sharing Powerpoint presentations](https://support.zoom.us/hc/en-us/articles/203395347-Screen-Sharing-a-PowerPoint-Presentation) for advice.
+* You can enable annotation/drawing on shared content, or on a blank "whiteboard" space e.g. for drawing diagrams. See the [Zoom documentation on annotation](https://support.zoom.us/hc/en-us/articles/115005706806-Using-annotation-tools-on-a-shared-screen-or-whiteboard)
 
 ## Breakout Rooms
 
 If you have more than 8 to 10 participants in your meeting, consider using breakout rooms to facilitate smaller group discussions. You can either have a random assignment of *n* people to *m* rooms, or predetermine who goes to which room. This needs to be arranged by the meeting **host** (see description of roles above). The host can broadcast a message to all breakout rooms e.g. when to wrap up discussion, and can switch between breakout rooms. 
 
-See Zoom's help page [here](https://support.zoom.us/hc/en-us/articles/206476093-Enabling-breakout-rooms) for more information. 
+See [Zoom's help page on breakout rooms](https://support.zoom.us/hc/en-us/articles/206476093-Enabling-breakout-rooms) for more information. 
 
 ## Record Your Meeting 
 
@@ -70,7 +70,7 @@ Use Zoom’s recording feature to record your meeting’s presentations and disc
 
 # Protect Your Meeting
 
-Publicizing and sharing meeting links on social media can unfortunately invite unwanted participation by disruptive guests (e.g. "Zoombombing"). We therefore recommend only sharing the meeting link with invited participants. You can also protect your meeting by setting a meeting password and controlling screen sharing permissions. See these articles for more guidance on how to change you Zoom settings and protect your meetings: 
+Publicizing and sharing meeting links on social media can unfortunately invite unwanted participation by disruptive guests (i.e., "Zoombombing"). We therefore recommend only sharing the meeting link with invited participants. You can also protect your meeting by setting a meeting password and controlling screen sharing permissions. See these articles for more guidance on how to change your Zoom settings and protect your meetings: 
 
 * [Security Settings for Zoom Meetings](https://umd.service-now.com/itsupport/?id=kb_article_view&sysparm_article=KB0015411&sys_kb_id=93a8eafadb7384904cb03562399619e4)
 * [How to Keep Uninvited Guests Out of Your Zoom Event](https://blog.zoom.us/wordpress/2020/03/20/keep-uninvited-guests-out-of-your-zoom-event/)
@@ -80,5 +80,5 @@ Publicizing and sharing meeting links on social media can unfortunately invite u
 
 * SESYNC's [Resources and Tips for Elevating Your Team Science in an All-Virtual World](https://www.sesync.org/resources-and-tips-for-elevating-your-team-science-in-an-all-virtual-world) 
 * GitLab's [handbook for using Zoom](https://about.gitlab.com/handbook/tools-and-tips/zoom/) is a great resource.
-* Zoom's web client has limited features compared to the desktop or phone app, e.g. screen sharing capabilities may depend on your operating system. See more details in the table [here](https://support.zoom.us/hc/en-us/articles/360027397692#note).
-* See some tips here on how to arrange screens effectively [here](https://keepteaching.iu.edu/resources/zoom/pin-video.html).
+* Zoom's web client has limited features compared to the desktop or phone app, e.g. screen sharing capabilities may depend on your operating system. See more details in this [table](https://support.zoom.us/hc/en-us/articles/360027397692#note).
+* See some [tips on how to arrange screens effectively here](https://keepteaching.iu.edu/resources/zoom/pin-video.html).
