very small typo edits

--- a/faq/_drafts/2021-02-12-Slack-FAQ.md
+++ b/faq/_drafts/2021-02-12-Slack-FAQ.md
@@ -20,7 +20,7 @@ Key workspace features:
 
 ## What are Slack channels? 
 
-A Slack workspace is comprised of [channels](https://slack.com/help/articles/360017938993-What-is-a-channel), where team members can connect and work together on group tasks.  These channels function as sub groups and allow you to better organize different components of your project.   There is no limit on the number of channels created in your workspace and team members can leave and join channels throughout the project. 
+A Slack workspace consists of [channels](https://slack.com/help/articles/360017938993-What-is-a-channel), where team members can connect and work together on group tasks.  These channels function as sub groups and allow you to better organize different components of your project. There is no limit on the number of channels created in your workspace, and team members can leave and join channels throughout the project. 
 
 Key channel features:
 * Channels can be made public or private within your workspace. 
@@ -41,6 +41,5 @@ It is important that teams are able to continue using their Slack workspace afte
 
 ## For more information: 
 
-[Slack: Getting Started](https://slack.com/help/categories/360000049043) 
-
-[Setting up Slack for small teams](https://slack.com/blog/collaboration/setting-up-slack-for-small-teams)
+- [Slack: Getting Started](https://slack.com/help/categories/360000049043) 
+- [Setting up Slack for small teams](https://slack.com/blog/collaboration/setting-up-slack-for-small-teams)
