--- a/quickstart/_drafts/2021-02-11-zoom-qs.md
+++ b/quickstart/_drafts/2021-02-11-zoom-qs.md
@@ -55,7 +55,7 @@ Zoom’s special features could enhance your group’s meeting experience.  Here
 
 ## Breakout Rooms
 
-![Breakout Rooms](/assets/images/Breakout_Rooms)
+![Breakout Rooms](/assets/images/Breakout_Rooms.png)
 
 If you have more than 8 to 10 participants in your meeting, consider using breakout rooms to facilitate smaller group discussions. You can either have a random assignment of *n* people to *m* rooms, or predetermine who goes to which room. This needs to be arranged by the meeting **host** (see description of roles above). The host can broadcast a message to all breakout rooms e.g. when to wrap up discussion, and can switch between breakout rooms. 
 
